[project]
name = "draft"
version = "0.1.0"
description = "A GitHub-style markdown editor with AI assistance, drag-and-drop image uploads, and live preview"
authors = [
    {name = "Draft Contributors", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["markdown", "editor", "ai", "writing", "blog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0", 
    "llm>=0.13.1",
    "typer>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/example/draft"
Repository = "https://github.com/example/draft"
Issues = "https://github.com/example/draft/issues"
Documentation = "https://github.com/example/draft#readme"

[project.scripts]
draft = "draft.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.hatch.build.targets.wheel]
packages = ["draft"]

[tool.hatch.build.targets.wheel.force-include]
"draft/index.html" = "draft/index.html"
"draft/app.js" = "draft/app.js"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true